[package]
name = "mparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8.14"
msgpacker = { git = "https://github.com/computermouth/msgpacker.git", rev = "9fd4b386ce5e6b70143b8eac5f2c68bf77b1ad5a" }