[package]
name = "munzip"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "minimal deflate-only unzip library"
homepage = "https://github.com/computermouth/niveluno/tree/master/munzip"
repository = "https://github.com/computermouth/niveluno"
readme = "README.md"
keywords = ["zip", "unzip", "deflate", "decompress", "minimal"]
categories = ["compression", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inflate = "0.4.5"
