[package]
name = "niveluno"
version = "0.1.0"
# needs to be 2021 until OU mutable globals are replaced
edition = "2021"

[dependencies]
gl = "0.14.0"
minipng = "=0.1.1"
munzip = { version = "0.1.1", path = "../munzip" }
sdl2 = { version = "0.36.0", features = ["mixer", "ttf"] }
thiserror = "1.0.58"
