[package]
name = "nmcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = { version = "1.4.1", features = ["extras"] }
rmp = "0.8.14"
serde = { version = "1.0.201", features = ["serde_derive"] }
serde_json = "1.0.117"
