[package]
name = "nmcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = { version = "1.4.1", features = ["extras"] }
image = "0.25.2"
mparse = { version = "0.1.0", path = "../mparse" }
raymath = { version = "0.1.0", path = "../raymath" }
serde = { version = "1.0.201", features = ["serde_derive"] }
serde_json = "1.0.117"
